force-app/main/default/objects/Temporal_Eventos_Detalles__c/Temporal_Eventos_Detalles__c.object-meta.xml
<CustomObject>
    <label>Temporal Evento Detalle</label>
    <nameField>
        <label>Temporal Evento Detalle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Eventos Detalles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>