force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_ACOM1__c.field-meta.xml
<CustomField>
    <fullName>DA_ACOM1__c</fullName>
    <label>DA_ACOM1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>