force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_ACOM2__c.field-meta.xml
<CustomField>
    <fullName>DA_ACOM2__c</fullName>
    <label>DA_ACOM2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>