force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_ACOM3__c.field-meta.xml
<CustomField>
    <fullName>DA_ACOM3__c</fullName>
    <label>DA_ACOM3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>