force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_ACT1__c.field-meta.xml
<CustomField>
    <fullName>DA_ACT1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DA_ACT1</label>
    <type>Checkbox</type>
</CustomField>