force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_ACT2__c.field-meta.xml
<CustomField>
    <fullName>DA_ACT2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DA_ACT2</label>
    <type>Checkbox</type>
</CustomField>