force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_BOLSA__c.field-meta.xml
<CustomField>
    <fullName>DA_BOLSA__c</fullName>
    <label>DA_BOLSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>