force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>DA_FECHAS__c</fullName>
    <label>DA_FECHAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>