force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_FECHAS_OK__c.field-meta.xml
<CustomField>
    <fullName>DA_FECHAS_OK__c</fullName>
    <label>DA_FECHAS_OK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>