force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_FECMAT__c.field-meta.xml
<CustomField>
    <fullName>DA_FECMAT__c</fullName>
    <label>DA_FECMAT</label>
    <type>Date</type>
</CustomField>