force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>DA_NOMBRE__c</fullName>
    <label>DA_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>