force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_NUMACT__c.field-meta.xml
<CustomField>
    <fullName>DA_NUMACT__c</fullName>
    <label>DA_NUMACT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>