force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_NUMTRP__c.field-meta.xml
<CustomField>
    <fullName>DA_NUMTRP__c</fullName>
    <label>DA_NUMTRP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>