force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_PRECIO__c.field-meta.xml
<CustomField>
    <fullName>DA_PRECIO__c</fullName>
    <label>DA_PRECIO</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>