force-app/main/default/objects/Temporal_Eventos_Detalles__c/fields/DA_TIPALU__c.field-meta.xml
<CustomField>
    <fullName>DA_TIPALU__c</fullName>
    <label>DA_TIPALU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>