force-app/main/default/objects/Temporal_Eventos_Detalles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DA_ALUMNO__c</columns>
    <columns>DA_TIPALU__c</columns>
    <columns>DA_NOMBRE__c</columns>
    <columns>DA_FECMAT__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Descripcion_Error__c</columns>
    <columns>Benefit_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>Tipo_Error__c</field>
        <operation>equals</operation>
        <value>No Encontrado</value>
    </filters>
    <label>All Records</label>
</ListView>